test/error/0001-sanity.c
/*
PATTERN: undefined symbol FOO
*/

int main()
{
	return FOO;
}

